--- a/style.css
+++ b/style.css
@@ -281,6 +281,14 @@ main {
     top: 10vh;
     z-index: 25;
     height: 80vh;
+    display: none;
+}
+
+.modal > img {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    cursor: pointer;
 }
 
 .modal .options {
@@ -458,10 +466,11 @@ main {
 }
 
 /* Overlay */
-.overlay {
+#overlay {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
     position: absolute;
     z-index: 20;
+    display: none;
 }
